# NNdioxide-asymMichael

./: .gitignore  2-5-Fold-Validation.ipynb  3-LORO-Validation.ipynb  4-LORO-Data-Augmentation-and-Weighted-Tuning.ipynb  5-Exp-Evaluation.ipynb  README.md  pyproject.toml
data/5-folds/: test_fold_0.csv  test_fold_1.csv  test_fold_2.csv  test_fold_3.csv  test_fold_4.csv
data/OOS/: test_OOS_1.csv  test_OOS_10.csv  test_OOS_11.csv  test_OOS_12.csv  test_OOS_13.csv  test_OOS_14.csv  test_OOS_15.csv  test_OOS_16.csv  test_OOS_17.csv  test_OOS_2.csv  test_OOS_3.csv  test_OOS_4.csv  test_OOS_5.csv  test_OOS_6.csv  test_OOS_7.csv  test_OOS_8.csv  test_OOS_9.csv
dative_chemprop/: predictor.py  utils.py
dative_chemprop/data/: collate.py  dataloader.py  datapoints.py
dative_chemprop/featurizers/: atom.py
dative_chemprop/models/: DativeCGR.py
dative_chemprop/nn/: hybrid_message_passing.py
dative_chemprop/nn/message_passing/: base.py
