[tool.poetry]
name = "dative_chemprop"
version = "0.1.0"
description = ""
authors = ["tmj <mj_t@zju.edu.cn>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
rdkit = "^2024.3"
scikit-learn = "<1.6"
pandas = "^2.2.3"
scikit-fingerprints = { version = "^1.12.0", optional = true }
seaborn = "^0.13.2"
chemprop = "^2.1.0"
pydantic = "^2.10.6"
patchworklib = "^0.6.5"
pycirclize = "^1.9.0"
matplotlib = "^3.10.1"

[tool.poetry.extras]
baselines = ["scikit-fingerprints"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
